Correction fautes orthographes

--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -119,7 +119,7 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		AuthC.1 & 3.1.1.1.1.1 3.1.1.1.1.2 3.1.1.1.1.3 3.1.1.1.1.13 & Ouvrir le logiciel. & Le formulaire de connexion apparait en pop-up au centre de la fenêtre, le reste de l'application est grisé (hormis la barre d'action). & \\
+		AuthC.1 & 3.1.1.1.1.1 3.1.1.1.1.2 3.1.1.1.1.3 3.1.1.1.1.13 & Ouvrir le logiciel. & Le formulaire de connexion apparait en pop-up au centre de la fenêtre, le reste de l'application est grisée (hormis la barre d'action). & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		AuthC.1.1 & 3.1.1.1.1.4 3.1.1.1.1.5 & Cliquer sur le bouton de déconnexion. & Le bouton doit être grisé et ne doit rien déclencher. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -476,7 +476,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		AuthS.1 & 3.1.2.1.2.1 & Envoyer une chaine de caractère contenant un pseudo suivit d'un mot de passe & Le programme détecte cette arrivé et l'indique dans une console de log & \\
+		AuthS.1 & 3.1.2.1.2.1 & Envoyer une chaine de caractère contenant un pseudo suivit d'un mot de passe & Le programme détecte cette arrivée et l'indique dans une console de log & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}		
 		AuthS.2 & 3.1.2.1.2.2 & Après avoir récupéré les informations essayer de les faire correspondre à la liste des pseudo / Mot de passe. & Le programme indique dans une console de log le succès ou l'échec de l'opération & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}		
@@ -541,7 +541,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\cline{4-5}
 		GecuS.1.3.2.1.1.2 & 3.2.6.2.1.2 & & Un champ texte aligné au texte "Mot de passe" & \\
 		\cline{1-2}\cline{4-5}
-		GecuS.1.3.2.1.1.3 & 3.2.6.2.1.3 & & Un champs de type selection de fichier & \\
+		GecuS.1.3.2.1.1.3 & 3.2.6.2.1.3 & & Un champs de type sélection de fichier & \\
 		\cline{1-2}\cline{4-5}
 		GecuS.1.3.2.1.1.3 & 3.2.6.2.1.4 & & Une case à cochée aligné avec le texte "Utilisateur temporaire" & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -605,9 +605,9 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		BancS.1.1 & 3.1.2.6.1.1 & Cliquer sur le moins & Un pop-up s'ouvre, celui ci contient 2 cases & \\
 		\cline{1-2}\cline{4-5}
-		BancS.1.1.1 & 3.1.2.6.1.1.1 & & Une case à coché alignée avec le texte "Supprimer le compte" & \\
+		BancS.1.1.1 & 3.1.2.6.1.1.1 & & Une case à cocher alignée avec le texte "Supprimer le compte" & \\
 		\cline{1-2}\cline{4-5}
-		BancS.1.1.2 & 3.1.2.6.1.1.2 & & Une case à coché alignée avec le texte "Bannir le compte" & \\
+		BancS.1.1.2 & 3.1.2.6.1.1.2 & & Une case à cocher alignée avec le texte "Bannir le compte" & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		BancS.1.2 & 3.1.2.6.1.2 & Cocher une case puis l'autre & Une seul case doit être cochée & \\
 		\cline{1-2}\cline{4-5}
@@ -617,7 +617,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\cline{4-5}
 		BancS.1.3.2 & 3.1.2.6.1.3.2 & & Un bouton "Annuler" & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BancS.1.4 & 3.1.2.6.1.4 & Cocher "Supprimer le compte" & Seul les 2 cases ( dont supprimer le compte" coché ) plus les 2 boutons sont présent. & \\
+		BancS.1.4 & 3.1.2.6.1.4 & Cocher "Supprimer le compte" & Seul les 2 cases ( dont "supprimer le compte" cochée ) plus les 2 boutons sont présent. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		BancS.1.5 & 3.1.2.6.1.5 & Cocher "Bannir le compte" & 2 Champs sont ajouté & \\
 		\cline{1-2}\cline{4-5}
@@ -631,9 +631,9 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\cline{4-5}
 		BancS.1.6.1 & 3.1.2.6.1.8 & & Il contient une durée en seconde & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BancS.2 & 3.1.2.4.2 & Et retirer les droits sur un fichier. & Ouvrir le fichier .acc et vérifié que les droits sur le fichier ont été retiré. & \\
+		BancS.2 & 3.1.2.4.2 & Et retirer les droits sur un fichier. & Ouvrir le fichier .acc et vérifier que les droits sur le fichier ont été retiré. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		BancS.3 & 3.1.2.4.3 & Bannir temporairement une personne. & Verifier que le fichier .accban est mis à jours. & \\
+		BancS.3 & 3.1.2.4.3 & Bannir temporairement une personne. & Vérifier que le fichier .accban est mis à jours. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		BancS.4 & 3.1.2.4.4 & Bannir un compte. & Vérifier que le champs raison est présent lors du bannissement. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -651,7 +651,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		BantS.1 & 3.1.2.5.1 & Cliquer sur un compte puis sur "-" présent sur la zone de gauche. & Un chams permet de donner une durée. & \\
+		BantS.1 & 3.1.2.5.1 & Cliquer sur un compte puis sur "-" présent sur la zone de gauche. & Un champ permet de donner une durée. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		BantS.2 & 3.1.2.5.2 & Cliquer sur un compte bannis. & Le temps restant apparait à droite. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -677,7 +677,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		BanpS.2.1.1 & 3.1.2.6.3.3.1 & & Un "+" vert est présent en bas à droite & \\
 		\cline{1-2}\cline{4-5}
-		BanpS.2.1.1.1 & 3.1.2.6.3.5 & Cliquer sur le "+" & Un pop-up apparait, celui ci permettant de selectionner des fichiers & \\
+		BanpS.2.1.1.1 & 3.1.2.6.3.5 & Cliquer sur le "+" & Un pop-up apparait, celui ci permettant de sélectionner des fichiers & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		BanpS.2.1.2 & 3.1.2.6.3.3.1 & & A droite du plus un "-" Rouge est présent & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -730,7 +730,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		CoaS.5 & 3.1.2.6.5.5 & Ouvrir le fichier contenant les comptes administrateurs & Le fichier contient une ligne unique de la forme : "pseudo@motDePasse:/CheminDeReference". & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		CoaS.6 & 3.1.2.6.5.6 & Essayer de donner des droits à partir de la racine. & Imposible d'accéder aux fichier présent avant la racine présente dans le fichier .shadow. & \\
+		CoaS.6 & 3.1.2.6.5.6 & Essayer de donner des droits à partir de la racine. & Impossible d'accéder aux fichier présent avant la racine présente dans le fichier .shadow. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		CoaS.7 & 3.1.2.6.5.7 & Supprimer un fichier en même temps qu'un utilisateur le visite. & L'utilisateur n'a plus d'accès au fichier. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -790,7 +790,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\hline
 		CobS.1 & 3.1.2.6.8.1 & Ouvrir le dossier contenant les comptes bannis & Le fichier contenant les comptes bannis doit avoir pour extension .accban & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		CobS.2 & 3.1.2.6.8.2 & Ouvrir le fichier .accban & Chaque ligne contient le motif de bannissemnt. & \\
+		CobS.2 & 3.1.2.6.8.2 & Ouvrir le fichier .accban & Chaque ligne contient le motif de bannissement. & \\
 		\cline{1-2}\cline{4-5}
 		CobS.3 & 3.1.2.6.8.3 & & Un timestamp est présent dans le fichier. & \\
 		\cline{1-2}\cline{4-5}
@@ -1004,7 +1004,7 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		CrypS.3 & 3.1.3.1.3 & Définir une clé de cryptage pour un fichier. & Le programme indique dans une console de log que le clé de cryptage est sauvegardée. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		CrypS.4 & 3.1.3.1.4 & Cliquer sur "Cryptage du fichier" et définir une clé & LE fichier est accessible uniquement avec la clé. & \\
+		CrypS.4 & 3.1.3.1.4 & Cliquer sur "Cryptage du fichier" et définir une clé & Le fichier est accessible uniquement avec la clé. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		CrypS.5 & 3.1.3.1.5 & Cliquer sur un fichier Crypté et entré la clé. & Le fichier est lisible et décrypté. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
