Correction fautes orthographes

--- a/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
+++ b/Cahiers_des_tests/Cahier_des_tests_de_recette.tex
@@ -119,7 +119,7 @@
 		\hline
 		\rowcolor{gris}Référence & Exigence & Test & Résultat attendu & Résultat/Commentaires\\
 		\hline
-		AuthC.1 & 3.1.1.1.1.1 3.1.1.1.1.2 3.1.1.1.1.3 3.1.1.1.1.13 & Ouvrir le logiciel. & Le formulaire de connexion apparait en pop-up au centre de la fenêtre, le reste de l'application est grisée (hormis la barre d'action). & \\
+		AuthC.1 & 3.1.1.1.1.1 3.1.1.1.1.2 3.1.1.1.1.3 3.1.1.1.1.13 & Ouvrir le logiciel. & Le formulaire de connexion apparait en pop-up au centre de la fenêtre, le reste de l'application est grisé (hormis la barre d'action). & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		AuthC.1.1 & 3.1.1.1.1.4 3.1.1.1.1.5 & Cliquer sur le bouton de déconnexion. & Le bouton doit être grisé et ne doit rien déclencher. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
@@ -832,13 +832,13 @@ $< nom\_du\_serveur>$ vous a banni !".&\\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		LimiS.11 & 3.1.2.7.12 & Cliquer sur le bouton "Plages horaires téléchargement" & Une liste d’horaires à cocher apparait. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.12 & 3.1.2.7.10 & Bloquer les téléchargement sur une plage horaire et tester de télécharger un fichier dans cette plage horaire & Les téléchargement sont bloqué sur la plage horaire définie. & \\
+		LimiS.12 & 3.1.2.7.10 & Bloquer les téléchargement sur une plage horaire et tester de télécharger un fichier dans cette plage horaire & Les téléchargement sont bloqués sur la plage horaire définie. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		LimiS.13 & 3.1.2.7.14 & Ouvrir le menu "Configuration" & Un bouton "Plage horaire téléversement" est présent dans la liste déroulante. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		LimiS.14 & 3.1.2.7.15 & Cliquer sur le bouton "Plage horaire téléversement" & Une liste d’horaires à cocher apparait. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
-		LimiS.15 & 3.1.2.7.13 & Bloquer les téléchargement sur une plage horaire et tester de télécharger un fichier dans cette plage horaire & Les téléchargement sont bloqué sur la plage horaire définie. & \\
+		LimiS.15 & 3.1.2.7.13 & Bloquer les téléchargement sur une plage horaire et tester de télécharger un fichier dans cette plage horaire & Les téléchargement sont bloqués sur la plage horaire définie. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
 		LimiS.16 & 3.1.2.7.16 & Essayer d'uploader un fichier dont l'extension est interdite ( exemple .exe) & Le programme doit refuser l'upload. & \\
 		\cline{1-2}\ccline{3-3}{gris}\cline{4-5}
