--- a/Rapport_reunion/Rapport_reunion_6.tex
+++ b/Rapport_reunion/Rapport_reunion_6.tex
@@ -12,9 +12,9 @@
 \geometry{hmargin=3.0cm,vmargin=1.5cm}
 \parindent=0pt
 
-\title{Rapport Reunion \#3}
+\title{Rapport Reunion \#6}
 \author{Auteur : Kévin \bsc{LAOUSSING}}
-\date{22 Octobre 2014}
+\date{13 Novembre 2014}
 
 	
 \begin{document}
@@ -28,9 +28,7 @@ Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 %--------------------------Ordre du jour------------------------------%
 \subsection*{Ordre du jour}
 \begin{itemize}[label = $\blacktriangleright$]
-\item Planification de la rédaction du \textsc{document des spécifications des exigences} durant les vacances.
-\item Choix d'un modèle du \textsc{document des spécifications des exigences} à adapter à notre projet.
-\item Mise à jour du \textsc{document de planification}.\\
+\item Réflexion sur le \textsc{document de conception générale}.
 \end{itemize}
 
 %--------------------------Bilan du travail réalisé------------------------------%
@@ -39,9 +37,9 @@ Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 \begin{itemize}[label = $\blacktriangleright$]
 \item \textbf{Cahier des tests de recettes} : nous avons achevé la rédaction, néanmoins avec 2 jours de retard.
 
-\item \textbf{Document de conception général} : nous avons fait un 1er découpage du projet en plusieurs modules.
+\item \textbf{Document de conception générale} : nous avons fait un 1er découpage du projet en plusieurs modules.
 
-\item \textbf{Planification} : Nous avons mis à jour la planification du projet cependant, il manque le détail des taches concernant le \textsc{document de conception général}.\\
+\item \textbf{Planification} : Nous avons mis à jour la planification du projet cependant, il manque le détail des taches concernant le \textsc{document de conception générale} ( la planification est visible à cette adresse : \url{http://ujm.eu5.org/gl/}).\\
 
 \end{itemize}
 
@@ -51,23 +49,23 @@ Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 
 \begin{itemize}[label = $\blacktriangleright$]
 \item Malgré le retard accumulé, nous avons décidé de maintenir la planification originale. Nous pensons que la rédaction des 4 documents restant nécessitera moins de temps que prévu. Le retard accumulé sera donc compensé.
+\item Nous utiliserons l'outil \url{http://genmymodel.com} pour la construction des diagrammes de séquences.
 \end{itemize}
 
 %--------------------------Prévision du travail à réaliser------------------------------%
 \subsection*{Prévision du travail à réaliser}
 
 \begin{itemize}[label = $\blacktriangleright$]
-\item Chaque membre de l'équipe doit rédiger leur partie et le présenter au reste de l'équipe lors de la prochaine réunion.
 
-\item Kévin Laoussing doit faire la mise a jour du \textsf{document de plannification} au plus tard ce week-end.\\
+\item Finir la rédaction \textsc{document de conception générale} et avoir déjà commencer la rédaction du cahier des test d'intégration.
+
+\item Mise à jour de la planification pour faire apparaître le détail des tâches.\\
 \end{itemize}
 
 %----------------------------------Prochaine réunion------------------------------------%
-\subsection*{Prochaine réunion : 28 octobre 2014}
+\subsection*{Prochaine réunion : 20 novembre 2014}
 
-\textbf{Ordre du jour} : Déterminer les exigences du client concernant l'interface graphique du client et du serveur.\\
-
-\textbf{Remarque} : Étant donnée l'impossibilité de se réunir physiquement durant la semaine de vacances, la prochaine réunion se fera en visio-conférence avec le logiciel skype, celui-ci étant déjà installé sur toute les machines de l'équipe.
+\textbf{Ordre du jour} : Réflexion sur le \textsc{document de conception détaillée}.\\
 
 
 \end{document}
