enormes modifications du rapport 6 git status

--- a/Rapport_reunion/Rapport_reunion_6.tex
+++ b/Rapport_reunion/Rapport_reunion_6.tex
@@ -39,7 +39,7 @@ Présents à cette réunion : Bascol Kevin, Laoussing Kévin, Reynaud Nicolas.
 
 \item \textbf{Document de conception générale} : nous avons fait un 1er découpage du projet en plusieurs modules.
 
-\item \textbf{Planification} : Nous avons mis à jour la planification du projet cependant, il manque le détail des taches concernant le \textsc{document de conception générale} ( la planification est visible à cette adresse : \url{http://ujm.eu5.org/gl/}).\\
+\item \textbf{Planification} : Nous avons mis à jour la planification du projet. Cependant, il manque le détail des tâches concernant le \textsc{document de conception générale} ( la planification est visible à cette adresse : \url{http://ujm.eu5.org/gl/}).\\
 
 \end{itemize}
 
