Copier coller IG

--- a/Document_de_conception_generale/Document_de_conception_generale.tex
+++ b/Document_de_conception_generale/Document_de_conception_generale.tex
@@ -184,19 +184,33 @@ Le seul traitement du contrôleur est de déterminer l'origine de chaque événe
 			\paragraph{Modules Serveur}
 
 				\subparagraph{Module de l'interface graphique}
-	
-	
+				\begin{flushleft}
+				Ce module contiendra toutes les classes Java en rapport avec l'interface graphique du client KNS. Ce module correspond aussi à la vue du patron MVC, il doit par conséquent accomplir les tâches suivantes :\\
+					
+					\begin{itemize}
+						\item Présenter les résultats renvoyés par le modèle.
+						\item Recevoir toute action de l'utilisateur (hover, clic de souris, sélection d'un bouton radio, cochage d'une case, entrée de texte, de mouvements, de voix, etc.).
+						\item Envoyer ces différents événements au contrôleur. 
+					\end{itemize}
+					
+					\textbf{Ce module n'effectue pas de traitement, elle se contente d'afficher les résultats des traitements effectués par le modèle et d'interagir avec l'utilisateur.}\\
+				\end{flushleft}
+				
 				\subparagraph{Module d'administration}
-	
+				\begin{flushleft}
+				\end{flushleft}
 	
 				\subparagraph{Module de gestion des dossiers}
-	
+				\begin{flushleft}
+				\end{flushleft}
 	
 				\subparagraph{Module de configuration et limitation}	
-				
+				\begin{flushleft}
+				\end{flushleft}
 	
 				\subparagraph{Module de statistiques}
-
+				\begin{flushleft}
+				\end{flushleft}
 	
 				\subparagraph{Module des historiques des événements}
 	
