--- a/Document_de_conception_generale/Document_de_conception_generale.tex
+++ b/Document_de_conception_generale/Document_de_conception_generale.tex
@@ -180,7 +180,7 @@ Le seul traitement du contrôleur est de déterminer l'origine de chaque événe
 	
 				\subparagraph{Module de communication}
 
-
+\newpage
 			\paragraph{Modules Serveur}
 
 				\subparagraph{Module de l'interface graphique}
@@ -198,6 +198,16 @@ Le seul traitement du contrôleur est de déterminer l'origine de chaque événe
 				
 				\subparagraph{Module d'administration}
 				\begin{flushleft}
+				Techniquement, le module d'administration est une implémentation du contrôleur du patron MVC, il doit donc contenir toutes les classes permettant d'accomplir les tâches spécifiques d'un contrôleur :
+				
+				\begin{itemize}
+					\item Prendre en charge la gestion des événements de synchronisation pour mettre à jour la vue ou le modèle et les synchroniser. 
+					\item Recevoir tous les événements de la vue et enclencher les actions à effectuer. 
+					\item Si une action nécessite un changement des données, faire une demande de modification des données au modèle afin que les données affichées se mettent à jour. 
+				\end{itemize}
+				
+Ce module n'effectue aucun traitement, ni de modification sur la donnée. Il analyse la requête du client (envoyé depuis la vue) et se contente d'appeler le modèle adéquat et de renvoyer la vue correspondant à la demande.\\
+Le seul traitement du contrôleur est de déterminer l'origine de chaque événement. Ce tri des événements pourrait-être implémenter par le patron de conception Stratégie.
 				\end{flushleft}
 	
 				\subparagraph{Module de gestion des dossiers}
